# Multi-Linux-Data-Transmission-System

./: CMakeLists.txt  LICENSE  global.h  main.cpp  main.h
Qtui/: drawer.cpp  drawer.h  img.qrc  loginform.cpp  loginform.h  newwidget.cpp  newwidget.h  newwidget.ui  process.cpp  process.h  process.ui  sendfile.cpp  sendfile.h  sendfile.ui  widget.cpp  widget.h  widget.ui
Test/: Test.cpp  Test.h
config/: connections.json  host_list.json  public_key_list.json
crypto/: rsa.cpp  rsa.h  sha256.cpp  sha256.h
data/: receive_test_data_ty_reborn.txt  transfer_test_data.txt
data_processing/: buffer_file.cpp  buffer_file.h  load_file.cpp  load_file.h  write_file.cpp  write_file.h
debug/: CMakeCache.txt  Makefile  Multi_Linux_Data_Transmission_System  cmake_install.cmake
include/: global.h
init/: config.cpp  get_host.cpp  get_host.h  init.cpp  init.h  load_connection.cpp  load_connection.h  load_hosts.cpp  load_hosts.h  load_key_filename.cpp  load_key_filename.h
json_cpp/jsontestrunner/: CMakeLists.txt
json_cpp/lib_json/: CMakeLists.txt  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
receiver/: forward.cpp  handle.cpp  handle.h  receive.c  receive.cpp  receive_init.cpp  receive_init.h
sender/: sender.cpp  sender.h  sender_init.cpp  sender_init.h
srv/: handle.cpp  srv_init.cpp  srv_init.h
